@@ -1,6 +1,8 @@
 2010-03-19  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* installer.nsi.in: Don't use hard coded GTK version in message boxes.
+	Add a generic function for checking existing GTK installations. Call it
+	from init function.
 
 2010-03-12  Onkar Shinde  <onkarshinde@gmail.com>
 
